# app/api/v1/stripe/create-checkout/route.ts
@@ -1,2 +1,0 @@
-export { POST } from '../../../stripe/create-checkout/route';
-
